<resources>
    <string name="app_name">MedibookAndroid</string>

    <!-- Welcome -->
    <string name="slogan">Book medical appointments online</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="title">Welcome to Medibook.\nMake an appointment quickly, anytime, anywhere.</string>


    <!-- Login -->
    <string name="welcome_back">Welcome Back</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_account">Don\'t have an account?</string>
    <string name="enter_your_email">Enter your registered email, we will send you a password reset link.</string>
    <string name="send_recovery_link">Send recovery link</string>
    <string name="backto_login">Back to login</string>

    <!-- Register -->
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="have_account">Already have an account?</string>


    <!-- Setting -->
    <string name="settings">Settings</string>
    <string name="password_manager">Password Manager</string>
    <string name="notifications_settings">Notification Settings</string>
    <string name="language_setting">Language Settings</string>
    <string name="delete_account">Delete Account</string>

    <!-- LanguageSettings -->
    <string name="select_language">Select display language; </string>
    <string name="vie_language">Vietnamese</string>
    <string name="eng_language">English</string>
    <string name="language">Language</string>

    <!-- Password Manager  -->
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_newpassword">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="action_continue">Continue</string>
    <string name="auth_email">Email verification</string>
    <string name="auth_otp_email">Enter the verification code sent to your email</string>"
    <string name="resent_code">Resend code </string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>


    <!-- Patient Home -->
    <string name="welcome_patient">Welcome, %s</string>
    <string name="search_doctor">Search doctor by name, specialty...</string>
    <string name="doctor_list">Doctor List</string>
    <string name="notfound_doctor">No doctors found</string>

    <!-- Patient Doctor Detail -->
    <string name="doctor_detail">Doctor Details</string>
    <string name="degrees">Degrees</string>
    <string name="experience">Experience</string>
    <string name="workplace">Workplace</string>
    <string name="reviews">Reviews</string>
    <string name="select_appointment_slot">Select Appointment Slot</string>

    <!-- Booking Summary -->
    <string name="confirm_appointment">Confirm Appointment</string>
    <string name="brief_description">Brief description of health condition</string>
    <string name="confirm_booking">Confirm Booking</string>

    <!-- Booking Success -->
    <string name="booking_successful">Booking Successful!</string>
    <string name="back_to_home">Back to Home</string>

    <!-- Patient Appointments -->
    <string name="manage_appointments">Manage Appointments</string>
    <string name="upcoming">Upcoming</string>
    <string name="history">History</string>
    <string name="canceled">Canceled</string>
    <string name="cancel_reschedule">Cancel/Reschedule</string>

    <!-- Patient Profile -->
    <string name="patient_profile">My Profile</string>
    <string name="patient_name">%s</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>

    <!-- Patient Edit Profile -->
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="address">Address</string>
    <string name="pls_select_gender">Please select a gender</string>
    <string name="save_changes">Save Changes</string>

    <!-- Notifications -->
    <string name="notifications">Notifications</string>
    <string name="delete_all">Delete All</string>
    <string name="no_notifications">No notifications</string>
    <string name="no_new_notifications">No new notifications</string>
    <string name="readed">Read</string>

    <!-- Notifications Settings -->
    <string name="general_notification">General Notifications</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>

    <!-- Doctor Login -->
    <string name="doctor_log_in">Log In for Doctor</string>
    <string name="username">Username</string>

    <!-- Doctor Schedule -->
    <string name="my_schedule">My Schedule</string>
    <string name="appointments_for">Appointments for %s</string>
    <string name="appointments_confirmed">Appointment-confirmed</string>
    <string name="no_appointment">No appointment</string>
    <string name="shifts_available">🕘 Shifts available</string>
    <string name="no_shifts_yet">No shifts yet</string>

    <!-- Add Schedule Slot -->
    <string name="create_new_slot">Create New Slot</string>
    <string name="selected_date">Date: </string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="save">Save</string>

    <!-- Doctor Requests -->
    <string name="appointment_requests">Appointment Requests</string>
    <string name="no_new_requests">No new requests</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>

    <!-- Doctor Profile -->
    <string name="doctor_profile">Doctor Profile</string>
    <string name="specialty">Specialty</string>
    <string name="qualifications">Qualifications</string>
    <string name="biography_description">Biography/Description</string>
    <string name="update">Update</string>

    <!-- Bottom Nav -->
    <string name="home">Home</string>
    <string name="appointments">Appointments</string>
    <string name="profile">Profile</string>
    <string name="schedule">Schedule</string>
    <string name="requests">Requests</string>
    <string name="terms_and_conditions_styled">By continuing, you agree to our <b>Terms of Service and Privacy Policy</b>.</string>
</resources>
