<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorNotificationSettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/md_theme_surfaceTint"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications_settings"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            />
    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_general_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_notification"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:checked="true" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_sound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="sound"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:checked="true" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_vibrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/vibration"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:checked="false" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
